# PubAgent

./: .gitignore  PubAgent  README.md  pyproject.toml  requirements.txt
docs/: pubagent_demo.webm
research_agent/: __init__.py  main.py  models.py
research_agent/agent/: __init__.py  act.py  llm.py  loop.py  observe.py  plan.py  synthesize.py  verify.py
research_agent/cache/: __init__.py  store.py
research_agent/sources/: __init__.py  europe_pmc.py  http.py  pmc.py  pubmed.py  semantic_scholar.py  unpaywall.py
tests/: test_research_agent.py
